@@ -1,3 +1,6 @@
+2006-10-24  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/taper.c: Fix allocation problem on tapedev.
+
 2006-10-20  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/taper.c (free_split_buffer): Correct free.
 
